// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`SaveAssessmentDialog renders with enabled = false 1`] = `
<DocumentFragment>
  <mock-generictoggle
    description="Show the save assessment dialog."
    enabled="false"
    id="enable-save-assessment-dialog"
    name="Enable the save assessment dialog"
  />
</DocumentFragment>
`;

exports[`SaveAssessmentDialog renders with enabled = true 1`] = `
<DocumentFragment>
  <mock-generictoggle
    description="Show the save assessment dialog."
    enabled="true"
    id="enable-save-assessment-dialog"
    name="Enable the save assessment dialog"
  />
</DocumentFragment>
`;
